# SYRIUSZ

./: GENESIS.md  MANIFESTO.md  README.md  ROADMAP.md  __init__.py  agenci spec.csv  diagnostavsm.py  init_dartrix.py  pyproject.toml  strategvsm.py  📄 LICENSE.txt  📄 requirements.txt
AGENT_DARTRIX/AGENT_DARTRIX/: Manifest Aktywacyjny DIRIGENTRIX_00.md  Niepotwierdzony 181649.crdownload  Qwen__20250917_wknnxc5mx.txt  Qwen_jsx_20250917_hx4cfrfzr — kopia.jsx  Qwen_jsx_20250917_hx4cfrfzr.jsx  Qwen_kartrix_20250917_6zbgsgm6r.txt  Qwen_kartrix_20250917_7bowl7eag.txt  Qwen_kartrix_20250917_dn17e3sns — kopia.txt  Qwen_kartrix_20250917_tk471sl2h — kopia.txt  SONIA_DARTRIX_TES_Specyfikacja-2 (1).docx  SONIA_DARTRIX_TES_Specyfikacja-2 — kopia.docx  __init__.py  agentssynchronizator.py  async_agent.py  diagnosta.py  harmonia.py  kartrix.txt  licencjadartrix.docx  linguax.py  lis — kopia.txt  lis.py  mentor.py  rad.py  readme md — kopia.txt  readme md.txt  scavenger.py  strateg.py  synchronizator.py  syriusz comet.md  vapes.py.txt_0.odt  xirtrad orbitals.py
GENESISTOP001/: README.md
agents/: DanielAdrianRatajczyk.Agent.py  Dartrix agent.py  Dartrix monitor.py  Dartrix_Copilot.py  RYTUAŁ AKTYWACYJNY.py  agentssynchronizator.py  commanderx.py  syriusz comet.txt  xirt.md
cli/: dartrix_cli.py
docs/archetypes/: Diagnosta.md
examples/: allegro_vsm_demo.py
integrations/: visio_export.py
orchestrator/: dirigentrix_vsm.py
tests/: test_process_step.py
vsm/: Niepotwierdzony 282075.crdownload  Niepotwierdzony 503538.crdownload  __init__.py  process_step.py  stream_analyzer.py
